[package]
name = "xrandr"
version = "0.1.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
x11 = { version = "2.18.2", features = ["xlib", "xrandr"] }
indexmap = "1.6.2"
