[package]
name = "xrandr"
version = "0.1.1"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"
description = "Safe rust bindings to xrandr (WIP, read-only so far)"
license = "MIT"
repository = "https://github.com/danielzfranklin/xrandr-rs"
keywords = ["xrandr", "libxrandr", "libxrandr2", "bindings", "linux"]
categories = ["os::linux-apis", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.24"
x11 = { version = "2.18.2", features = ["xlib", "xrandr"] }
indexmap = "1.6.2"
serde = {version = "1.0.133", features=["derive"], optional=true}
time = "0.3.20"

[features]
serialize = ["serde", "indexmap/serde-1"]
